initial setup modules application, core, kafka and persistence

--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,42 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>application</module>
+        <module>core</module>
+        <module>kafka</module>
+        <module>persistence-qldb</module>
+    </modules>
+
+    <properties>
+        <java.version>11</java.version>
+        <springframework.boot.version>2.5.4</springframework.boot.version>
+        <projectlombok.version>1.18.10</projectlombok.version>
+        <slf4j.version>1.7.30</slf4j.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${projectlombok.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
+
+
 </project>
