--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,1 +1,7 @@
-spring.kafka.bootstrap-servers=localhost:9092
+org.zew.kafka.port=9092
+org.zew.kafka.consumer.group=consumerGroup1
+org.zew.kafka.topic.missions=missions
+org.zew.kafka.maxpoll=1
+org.zew.kafka.offset=earliest
+org.zew.kafka.autocommit=false
+org.zew.kafka.host=localhost
