fixes kafka topic name in properties file and changes @Component to @Service in DonationEventKafkaConsumer

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
 org.zew.kafka.port=9092
 org.zew.kafka.consumer.group=consumerGroup1
-org.zew.kafka.topic.missions=missions
+org.zew.kafka.topic.donations=donations
 org.zew.kafka.maxpoll=1
 org.zew.kafka.offset=earliest
 org.zew.kafka.autocommit=false
