--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>${java.version}</source>
-					<target>${java.version}}</target>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
