--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,6 +31,11 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write
+  contents: read
+  packages: write
+
 env:
   ECR_REPOSITORY: "$(basename ${GITHUB_REPOSITORY})"
   ECS_SERVICE: zew-donations                # set this to your Amazon ECS service name
